                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 23-12-2005 updated: Swedish language file (Thnx to blittan)
 - 23-12-2005 updated: Korean language file (Thnx to AkoXko)
 - 23-12-2005 updated: Italian language file (Thnx to kotix)
 - 23-12-2005 updated: German language file (Thnx to deezle)
 - 23-12-2005 updated: Norwegian language file (Thnx to vnm)
 - 23-12-2005 updated: Dutch language file (Thnx to tijmengozer)
 - 23-12-2005 changed: moved music library into a directory class
                       MusicDatabase will be updated to version 1.4
 - 23-12-2005 changed: moved sorting and available view as controls out of the my music windows
 - 22-12-2005 changed: My Music Library would incorrectly handle artists and albums that were blank as if they were the "all" item.
			These items are now filtered out of the display.
 - 22-12-2005 added: HttpApi: FileSize to GetCurrentlyPlaying and the use of ";;" as a literal ";" rather than a separator
 - 22-12-2005 fixed: HttpApi: GetDirectory
 - 22-12-2005 fixed: dvdplayer would drop frames / stall on a dvd cell change when previous cell didn't have audio and next did
 - 22-12-2005 changed: dvdplayer now checks for eof on read error. if the error is really end of file, exit player, otherwise retry.
 - 21-12-2005 fixed: GUI Calibration screen was constantly allocating/deallocating it's resources.
 - 21-12-2005 changed: Moved resume time saving into the application class.
 - 21-12-2005 changed: Better solution for genre problem in libid3tag.dll.
 - 21-12-2005 added: Support for treating stacked files as a single volume. Set "Bypass CD Selection" to "Immediately" to test.